syntax = "proto3";

package hello;
option go_package = "../pb";

message Message {
  string say = 1;
}

// 请求
message Request {
  string name = 1;
}

// 响应
message Response {
  string msg = 1;
}

message StreamingRequest {
  int64 count = 1;
}

message StreamingResponse {
  int64 count = 1;
}

message Ping {
  int64 stroke = 1;
}

message Pong {
  int64 stroke = 1;
}

service HelloService {
  rpc Call(Request) returns (Response);
  rpc Stream(StreamingRequest) returns (stream StreamingResponse);
  rpc PingPong(stream Ping) returns (stream Pong);
}
